@@ -9,9 +9,10 @@ Two independent services share a common domain library and communicate exclusive
 
 ```
 ┌─────────────────────────────────────────────────────────────────────────────┐
-│                           event-producer  (Spring Boot 3.4 · port 8080)    │
+│                           event-producer  (Spring Boot 4.1 · port 8080)    │
 │                                                                             │
 │  REST POST /api/v1/events                                                   │
+│  REST GET  /api/v1/events/{inboxId}/status                                  │
 │         │                                                                   │
 │         ▼                                                                   │
 │  ┌─────────────┐   idempotent save   ┌──────────────────┐                  │
@@ -19,6 +20,7 @@ Two independent services share a common domain library and communicate exclusive
 │  │ Service     │                     │  status=PENDING  │                   │
 │  └─────────────┘                     └──────────────────┘                  │
 │                                               │                             │
+│                                  findAndModify (atomic claim)               │
 │                                  scheduler every 5 s                       │
 │                                               │                             │
 │  ┌─────────────┐   publish + timeout  ┌───────▼──────────┐                 │
@@ -52,7 +54,7 @@ Two independent services share a common domain library and communicate exclusive
 Observability layer (all ports in docker-compose):
   Loki ◄── logback appender (both services push logs)
   Prometheus ◄── /actuator/prometheus (producer) · /prometheus (consumer)
-  Grafana ── datasources auto-provisioned: Loki + Prometheus
+  Grafana ── datasources auto-provisioned: Loki + Prometheus · dashboard: EventPOF Overview
   Logstash ── TCP/Beats pipeline, stdout output (extend for Elasticsearch)
 ```
 
@@ -62,14 +64,15 @@ Observability layer (all ports in docker-compose):
 
 | Layer | event-producer | event-consumer |
 |---|---|---|
-| Framework | Spring Boot **3.4.1** | Micronaut **4.7.3** |
-| Java | 21 (LTS) | 21 (LTS) |
+| Framework | Spring Boot **4.1.0** | Micronaut **4.7.x** |
+| Java | 21 (preview features enabled) | 21 (preview features enabled) |
 | Messaging | spring-kafka | micronaut-kafka |
-| Persistence | Spring Data MongoDB | **Micronaut Data MongoDB** (compile-time queries) |
+| Persistence | Spring Data MongoDB | Micronaut Data MongoDB (compile-time queries) |
 | Metrics | Micrometer + Prometheus | Micrometer + Prometheus |
 | Logging | Loki4j + Logstash encoder | Loki4j + Logstash encoder |
 | Tests | JUnit 5 + Mockito | JUnit 5 + Mockito + `@MicronautTest` |
-| Integration tests | TestContainers (Kafka, Mongo) | TestContainers via **`TestPropertyProvider`** |
+| Integration tests | — | TestContainers via `TestPropertyProvider` |
+| Packaging | Spring Boot fat JAR | maven-shade-plugin fat JAR |
 
 ---
 
@@ -84,46 +87,28 @@ Observability layer (all ports in docker-compose):
 
 ---
 
-## Quick start (local)
+## Quick start (Docker — recommended)
 
-### 1 — Clone and build the common library
+### 1 — Build
 
 ```bash
 git clone <repo-url>
 cd event-pof
-mvn install -pl event-common
+mvn clean install -DskipTests
 ```
 
-### 2 — Start the infrastructure
+### 2 — Start everything
 
 ```bash
-bash start-local.sh
+docker compose up -d --build
 ```
 
-This starts Kafka, Zookeeper, MongoDB, Loki, Promtail, Prometheus, Grafana, Logstash and creates the required Kafka topics.
+This starts all infrastructure (Kafka, MongoDB, Loki, Prometheus, Grafana, Logstash) **and** both application services.
 
-Expected output:
-```
-Infrastructure ready. Start the apps:
-  event-producer: cd event-producer && mvn spring-boot:run
-  event-consumer: cd event-consumer && mvn spring-boot:run
-```
-
-### 3 — Start the services (two terminals)
+### 3 — Send a test event
 
 ```bash
-# terminal 1
-cd event-producer
-mvn spring-boot:run
-
-# terminal 2
-cd event-consumer
-mvn mn:run          # or: mvn micronaut:run
-```
-
-### 4 — Send a test event
-
-```bash
+# Linux / macOS
 curl -s -X POST http://localhost:8080/api/v1/events \
   -H "Content-Type: application/json" \
   -d '{
@@ -133,7 +118,14 @@ curl -s -X POST http://localhost:8080/api/v1/events \
     "sourceSystem": "order-service",
     "correlationId": "c-abc-123",
     "data": { "orderId": 42, "amount": 199.99 }
-  }' | jq
+  }'
+```
+
+```powershell
+# Windows PowerShell
+Invoke-WebRequest -Uri "http://localhost:8080/api/v1/events" -Method POST `
+  -ContentType "application/json" -UseBasicParsing `
+  -Body '{"eventKey":"ord-001","eventType":"ORDER_CREATED","createdBy":"user@example.com","sourceSystem":"order-service","data":{"orderId":42}}'
 ```
 
 Expected response (`202 Accepted`):
@@ -147,18 +139,23 @@ Expected response (`202 Accepted`):
 
 Within ~5 seconds the `InboxRelayService` picks up the event, publishes it to Kafka, and the consumer processes and persists it.
 
+### 4 — Check event status
+
+```bash
+curl http://localhost:8080/api/v1/events/{inboxId}/status
+```
+
 ### 5 — Verify end-to-end
 
 ```bash
-# Check inbox (producer side)
-curl http://localhost:8082  # Mongo Express — browse inbox_events collection
-
-# Check processed (consumer side)
 # producer health
 curl http://localhost:8080/actuator/health
 
 # consumer health
 curl http://localhost:8081/health
+
+# browse MongoDB collections
+open http://localhost:8082   # Mongo Express
 ```
 
 ---
@@ -169,7 +166,9 @@ curl http://localhost:8081/health
 |---|---|---|
 | event-producer API | http://localhost:8080/api/v1/events | — |
 | event-producer health | http://localhost:8080/actuator/health | — |
+| event-producer metrics | http://localhost:8080/actuator/prometheus | — |
 | event-consumer health | http://localhost:8081/health | — |
+| event-consumer metrics | http://localhost:8081/prometheus | — |
 | Kafka UI | http://localhost:9080 | — |
 | Mongo Express | http://localhost:8082 | — |
 | Grafana | http://localhost:3000 | admin / admin |
@@ -188,14 +187,14 @@ Pure Java library — no framework dependency. Contains shared domain objects co
 event-common/src/main/java/com/eventpof/common/
 ├── domain/
 │   ├── AuditData.java       record: createdBy, createdAt, correlationId, sourceSystem
-│   └── EventPayload.java    record: eventKey, eventType, auditData, data (JsonNode)
+│   └── EventPayload.java    record: eventKey, eventType, auditData, data (Map<String,Object>)
 └── dto/
     └── EventRequest.java    inbound REST request (validated)
 ```
 
 **Why a shared library?** Both services must serialize/deserialize `EventPayload` through Kafka. Keeping the type in one place avoids schema drift.
 
-### event-producer  _(Spring Boot 3.4)_
+### event-producer  _(Spring Boot 4.1)_
 
 Accepts events via REST and guarantees at-least-once delivery to Kafka using the **Inbox Pattern**.
 
@@ -203,20 +202,22 @@ Accepts events via REST and guarantees at-least-once delivery to Kafka using the
 src/main/java/com/eventpof/producer/
 ├── api/
 │   ├── EventController.java          POST /api/v1/events → 202 Accepted
+│   │                                 GET  /api/v1/events/{inboxId}/status → 200 | 404
 │   └── GlobalExceptionHandler.java   RFC 9457 ProblemDetail responses
 ├── domain/inbox/
 │   ├── InboxEvent.java               MongoDB document (status machine)
 │   ├── InboxEventRepository.java     Spring Data interface
-│   └── InboxEventStatus.java         PENDING → PUBLISHED | FAILED
+│   └── InboxEventStatus.java         PENDING → IN_PROGRESS → PUBLISHED | FAILED
 ├── service/
 │   ├── EventIngestionService.java    validates + saves to inbox (idempotent on eventKey)
-│   └── InboxRelayService.java        @Scheduled — reads PENDING, publishes, marks PUBLISHED
+│   ├── EventStatusService.java       reads inbox event by id
+│   └── InboxRelayService.java        @Scheduled — atomic claim via findAndModify
 └── infrastructure/kafka/
     ├── KafkaEventPublisher.java       CompletableFuture + orTimeout(5s)
-    └── KafkaProducerConfig.java       idempotent producer, acks=all, 3 broker-level retries
+    └── KafkaProducerConfig.java       idempotent producer, acks=all, 3 retries
 ```
 
-**Inbox pattern flow:**
+**Inbox pattern flow (atomic claim — race-condition safe):**
 
 ```
 POST /events
@@ -224,13 +225,11 @@ POST /events
     ← 202 Accepted
 
 every 5 s:
-    read top 10 PENDING
-    for each:
+    findAndModify(status=PENDING → IN_PROGRESS)    ← atomic — safe for multiple instances
+    for each claimed event:
         publish to Kafka (timeout 5 s)
         on success → mark PUBLISHED
         on failure → mark FAILED, retryCount++
-        if retryCount < 3 → reset to PENDING (will retry next tick)
-        if retryCount >= 3 → stays FAILED (manual intervention / alerting)
 ```
 
 **Idempotency:** duplicate `eventKey` returns the existing `inboxId` without re-saving.
@@ -241,7 +240,7 @@ Consumes `events.domain`, processes with 3-retry policy, routes failures to DLT.
 
 ```
 src/main/java/com/eventpof/consumer/
-├── ConsumerApplication.java                Micronaut.run(...)
+├── ConsumerApplication.java
 ├── domain/processed/
 │   ├── ProcessedEvent.java                 @MappedEntity — Micronaut Data MongoDB entity
 │   ├── ProcessedEventRepository.java       @MongoRepository — compile-time generated queries
@@ -249,25 +248,9 @@ src/main/java/com/eventpof/consumer/
 ├── service/
 │   └── EventProcessorService.java          @Singleton, idempotent on eventKey
 └── infrastructure/kafka/
-    ├── KafkaEventConsumer.java             @KafkaListener + @OffsetStrategy (type-level)
-    │                                       implements KafkaListenerExceptionHandler → DLT
+    ├── KafkaEventConsumer.java             @KafkaListener, implements KafkaListenerExceptionHandler
     └── DltEventProducer.java               @KafkaClient — publishes to events.domain.DLT
 ```
-
-**Key Micronaut decisions:**
-
-| Concern | Micronaut approach |
-|---|---|
-| DI | Constructor injection, `@Singleton` — no reflection at runtime |
-| Repository | `@MongoRepository` — MongoDB queries generated at **compile time** by `micronaut-data-processor` |
-| Kafka retry | `@ErrorStrategy(RETRY_ON_ERROR, retryCount=3, retryDelay="2s")` — declarative on `@KafkaListener` |
-| DLT | `@KafkaClient` interface `DltEventProducer` — Micronaut generates the producer impl |
-| Offset commit | `@OffsetStrategy(AUTO)` on the listener class — not on individual methods |
-| Exception handling | Listener implements `KafkaListenerExceptionHandler.handle()` — called after retries exhausted |
-
-**Micronaut Data MongoDB vs Spring Data:**
-- Spring Data generates queries at runtime using reflection.
-- Micronaut Data generates queries at **compile time** via annotation processing — zero reflection, faster startup, AOT-friendly, GraalVM-native ready.
 
 ---
 
@@ -279,26 +262,21 @@ src/main/java/com/eventpof/consumer/
 attempt 1 ──► Kafka (timeout 5 s)
     fail → attempt 2 (next scheduler tick, ~5 s later)
     fail → attempt 3
-    fail → status=FAILED (no more auto-retries)
-              └─► alert / manual replay
+    fail → status=FAILED
 ```
 
-Kafka producer is configured with `retries=3, retry.backoff.ms=1000, acks=all, enable.idempotence=true`.
+Kafka producer: `retries=3, retry.backoff.ms=1000, acks=all, enable.idempotence=true`.
 
 ### Consumer side (Kafka → processing)
 
 ```
 message received
     └─► process()
-          fail → retry in 2 s
-          fail → retry in 2 s
-          fail → retry in 2 s
-          fail (3rd) → KafkaListenerExceptionHandler.handle()
-                          └─► DltEventProducer.sendToDlt()       (events.domain.DLT)
-                          └─► processorService.handleDeadLetter() (MongoDB DEAD_LETTER)
+          fail → retry in 2 s  (×3)
+          fail (3rd) → KafkaListenerExceptionHandler
+                          └─► DltEventProducer → events.domain.DLT
+                          └─► MongoDB: status=DEAD_LETTER
 ```
-
-Non-retryable exceptions (e.g., `IllegalArgumentException`) skip directly to the DLT handler.
 
 ---
 
@@ -310,44 +288,20 @@ Non-retryable exceptions (e.g., `IllegalArgumentException`) skip directly to the
 mvn test
 ```
 
-### Run integration tests (consumer module)
-
-Requires Docker (TestContainers pulls images automatically).
+### Run integration tests (requires Docker)
 
 ```bash
-cd event-consumer
-mvn verify
+mvn test -Dintegration.tests=true -pl event-consumer
 ```
 
-Integration tests use `TestPropertyProvider` — the Micronaut-idiomatic way to inject TestContainers connection strings **before** the application context starts. No race condition with static initializers.
-
-```java
-@MicronautTest
-@TestInstance(TestInstance.Lifecycle.PER_CLASS)
-class KafkaEventConsumerIntegrationTest implements TestPropertyProvider {
-
-    static final KafkaContainer kafka = new KafkaContainer(...);
-    static final MongoDBContainer mongo = new MongoDBContainer(...);
-
-    @Override
-    public Map<String, String> getProperties() {
-        // containers started explicitly here → context created after
-        if (!kafka.isRunning()) kafka.start();
-        if (!mongo.isRunning()) mongo.start();
-        return Map.of(
-            "kafka.bootstrap.servers", kafka.getBootstrapServers(),
-            "mongodb.uri", mongo.getConnectionString() + "/eventpof-test"
-        );
-    }
-}
-```
+Integration tests use `TestPropertyProvider` — Micronaut-idiomatic pattern that starts TestContainers **before** the application context is created.
 
 ### Test coverage summary
 
 | Test class | Type | What it covers |
 |---|---|---|
 | `EventIngestionServiceTest` | Unit (Mockito) | Idempotency, auditData creation, correlationId generation |
-| `InboxRelayServiceTest` | Unit (Mockito) | Publish success, failure, max-retry boundary, empty inbox |
+| `InboxRelayServiceTest` | Unit (Mockito) | Publish success, failure, retry boundary, empty inbox |
 | `EventProcessorServiceTest` | Unit (Mockito) | Process new event, skip duplicate, DLT save, DLT dedup |
 | `KafkaEventConsumerIntegrationTest` | Integration (TestContainers) | E2E consume, duplicate skip, DLT routing |
 
@@ -355,51 +309,49 @@ class KafkaEventConsumerIntegrationTest implements TestPropertyProvider {
 
 ## Observability
 
-### Logs → Loki → Grafana
+### Grafana dashboard
 
-Both services push structured JSON logs (via `loki4j` appender) to `http://localhost:3100`.
+Open **http://localhost:3000** (admin / admin) → Dashboards → EventPOF → **EventPOF Overview**
 
-In Grafana (`http://localhost:3000`, admin/admin):
-1. Go to **Explore**
-2. Select datasource **Loki**
-3. Query: `{app="event-consumer"}` or `{app="event-producer"}`
+Panels: HTTP req/s, P99 latency, error rate, Kafka producer/consumer metrics, JVM heap, GC pause, threads, CPU.
 
-All logs include the `service` label, `level`, and host.
+### Logs → Loki
 
-### Metrics → Prometheus → Grafana
+Both services push structured JSON logs via `loki4j` appender. Query in Grafana Explore:
+```
+{job=~"event-producer|event-consumer"}
+```
 
-Producer exposes: `http://localhost:8080/actuator/prometheus`
-Consumer exposes: `http://localhost:8081/prometheus`
+### Metrics → Prometheus
 
-Prometheus scrapes both every 15 s. In Grafana, select datasource **Prometheus** and explore `kafka_*`, `mongodb_*`, `jvm_*` metrics.
+| Service | Endpoint |
+|---|---|
+| event-producer | http://localhost:8080/actuator/prometheus |
+| event-consumer | http://localhost:8081/prometheus |
 
-### Kafka topics
-
-Open Kafka UI at `http://localhost:9080`:
-- `events.domain` — main event topic (3 partitions)
-- `events.domain.DLT` — dead letter topic
+Prometheus scrapes both every 15 s.
 
 ---
 
 ## Configuration reference
 
-### event-producer (`application.yml`)
+### event-producer
 
 | Property | Default | Description |
 |---|---|---|
-| `MONGODB_URI` | `mongodb://admin:password@localhost:27017/...` | MongoDB connection string |
-| `KAFKA_BOOTSTRAP_SERVERS` | `localhost:9092` | Kafka brokers |
-| `kafka.topics.events` | `events.domain` | Target topic |
-| `inbox.relay.interval-ms` | `5000` | Relay scheduler interval |
+| `SPRING_PROFILES_ACTIVE` | — | Set to `docker` when running in container |
+| `spring.data.mongodb.uri` | `mongodb://...localhost:27017/...` | MongoDB connection |
+| `spring.kafka.bootstrap-servers` | `localhost:9092` | Kafka brokers |
+| `inbox.relay.interval-ms` | `5000` | Relay scheduler interval (ms) |
+| `LOKI_URL` | `http://localhost:3100` | Loki push endpoint |
 
-### event-consumer (`application.yml`)
+### event-consumer
 
 | Property | Default | Description |
 |---|---|---|
-| `MONGODB_URI` | `mongodb://admin:password@localhost:27017/...` | MongoDB connection string |
+| `MONGODB_URI` | `mongodb://...localhost:27017/...` | MongoDB connection |
 | `KAFKA_BOOTSTRAP_SERVERS` | `localhost:9092` | Kafka brokers |
 | `kafka.topics.events` | `events.domain` | Consumed topic |
-| `kafka.consumer.group-id` | `event-consumer-group` | Consumer group |
 | `LOKI_URL` | `http://localhost:3100` | Loki push endpoint |
 
 ---
@@ -408,28 +360,29 @@ Open Kafka UI at `http://localhost:9080`:
 
 ```
 event-pof/
-├── pom.xml                        parent — Java 21, shared BOM management
-├── docker-compose.yml             full local environment
-├── start-local.sh                 infra startup + topic creation script
+├── pom.xml                        parent — Java 21, -parameters, --enable-preview
+├── docker-compose.yml             full environment (infra + apps)
 │
 ├── event-common/                  shared domain (no framework)
-│   └── src/main/java/com/eventpof/common/
 │
-├── event-producer/                Spring Boot 3.4 — REST + Inbox
-│   ├── pom.xml                    imports spring-boot-dependencies BOM
+├── event-producer/                Spring Boot 4.1 — REST + Inbox Pattern
+│   ├── Dockerfile
+│   ├── src/main/resources/
+│   │   ├── application.yml
+│   │   └── application-docker.yml   Docker profile (mongodb/kafka via container names)
 │   └── src/
 │
 ├── event-consumer/                Micronaut 4.7 — Kafka consumer
-│   ├── pom.xml                    imports micronaut-platform BOM
+│   ├── Dockerfile
 │   └── src/
 │
 └── infra/
-    ├── mongo/init.js              collection + index initialization
-    ├── loki/loki-config.yml
-    ├── promtail/promtail-config.yml
-    ├── prometheus/prometheus.yml  scrape configs for both services
-    ├── logstash/pipeline/         logstash.conf — Beats/TCP input
-    └── grafana/provisioning/      auto-provisioned datasources
+    ├── mongo/init.js
+    ├── loki/
+    ├── promtail/
+    ├── prometheus/prometheus.yml
+    ├── logstash/
+    └── grafana/provisioning/      datasources (uid: prometheus, loki) + EventPOF dashboard
 ```
 
 ---
@@ -438,8 +391,8 @@ event-pof/
 
 | Limitation | Production fix |
 |---|---|
-| Single inbox relay instance — no distributed lock | Use MongoDB `findOneAndUpdate` with `status: IN_PROGRESS` to claim a batch atomically |
-| No MongoDB transactions in relay | Use replica set + multi-document transactions, or accept at-least-once with consumer idempotency (already in place) |
-| Logstash outputs to stdout only | Add Elasticsearch output and configure index lifecycle |
-| `events.domain.DLT` not monitored | Add Kafka consumer for DLT that triggers alerts (PagerDuty, Slack) |
-| No schema registry | Add Confluent Schema Registry + Avro or Protobuf for `EventPayload` |
+| No MongoDB transactions in relay | Use replica set + multi-document transactions |
+| Logstash outputs to stdout only | Add Elasticsearch output + ILM policy |
+| `events.domain.DLT` not monitored | Add consumer that triggers alerts (PagerDuty, Slack) |
+| No schema registry | Add Confluent Schema Registry + Avro / Protobuf for `EventPayload` |
+| Single Kafka partition | Increase partitions + tune consumer group for parallelism |
